--- a/.github/workflows/openai-review.yml
+++ b/.github/workflows/openai-review.yml
@@ -31,7 +31,7 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         with:
           debug: true
-          review_comment_lgtm: false
+          review_comment_lgtm: true
           path_filters: |
             !dist/**
             !**/*.lock
