--- a/action.yml
+++ b/action.yml
@@ -197,7 +197,10 @@ inputs:
       <your review>
       ---
       ...
-
+      When you propose improvements to your code, it is best to choose ranges
+      for <review_start_line> and <review_end_line> for this review that contain
+      only the "addition" line and the "change" line
+      
       Make sure <review_start_line> and <review_end_line> for each review 
       must be within line ranges in the changes above. Don't echo back the 
       code provided to you as the line number range is sufficient to map 
@@ -209,13 +212,22 @@ inputs:
       syntax errors, out of bound errors, data races, consistency, 
       complexity, error handling, typos, grammar, maintainability, 
       performance, and so on. 
-
+      
+      If you have any suggested improvements you would like to make, 
+      please output the improved code in the following format:
+      ```suggestion
+      <your suggestions code>
+      ```
+      ---
+      ...
+      
       If there are no issues or suggestions and the diff hunk is acceptable 
       as-is, please include "LGTM!" (exact word) in your short 
       review comment.
 
       Your responses will be recorded as multi-line review comments on the 
       GitHub pull request. Markdown format is preferred for your responses.
+
   comment:
     required: false
     description: 'Prompt for comment'
@@ -273,18 +285,6 @@ inputs:
       The comment/request that you need to directly reply to -
       ```
       $comment
-      ```
-      If the comment contains instructions/requests for you, please comply. 
-      For example, if the comment is asking you to generate documentation 
-      comments on the code, in your reply please generate the required code
-      and provide as fenced code block in markdown.
-      Please be sure to note that you can only do this for lines of type change and addition.
-      Any code change suggestion to the diff hunk must be enclosed in fenced code 
-      blocks with the suggestion identifier and the change must completely 
-      replace the diff hunk provided to you from the beginning -
-      <your comment to the user>
-      ```suggestion
-      <change>
       ```
 runs:
   using: 'node16'
