--- a/action.yml
+++ b/action.yml
@@ -215,6 +215,11 @@ inputs:
       review comment.
 
       Markdown format is preferred for your responses.
+      Markdown format is preferred for your responses.
+      Markdown format is preferred for your responses.
+      Markdown format is preferred for your responses.
+      Markdown format is preferred for your responses.
+      Markdown format is preferred for your responses.
       Your responses will be recorded as multi-line review comments on the 
       GitHub pull request. Markdown format is preferred for your responses.
   comment:
