--- a/action.yml
+++ b/action.yml
@@ -214,14 +214,9 @@ inputs:
       as-is, please include "LGTM!" (exact word) in your short 
       review comment.
 
-      Markdown format is preferred for your responses.
-      Markdown format is preferred for your responses.
-      Markdown format is preferred for your responses.
-      Markdown format is preferred for your responses.
-      Markdown format is preferred for your responses.
-      Markdown format is preferred for your responses.
+      Markdown format is preferred for your respnses.
       Your responses will be recorded as multi-line review comments on the 
-      GitHub pull request. Markdown format is preferred for your responses.
+      GitHub pull request.
   comment:
     required: false
     description: 'Prompt for comment'
