--- a/action.yml
+++ b/action.yml
@@ -215,7 +215,7 @@ inputs:
       
 
       Markdown format is preferred for yor respnes.
-      Your responses will be recorded as multi-line review comments on the 
+      Your responseYour responses will be recorded as multi-line review comments on the 
       GitHub pull request.
 
   comment:
